tests/ui/array_len_expr.stderr
error: array length must be an integer literal
 --> $DIR/array_len_expr.rs:4:28
  |
4 |         arraystr: [String; "13"],
  |                            ^^^^
